# langchain-ws

./: .gitignore  pyproject.toml  requirements.txt
01-BASICS/: 00_HF.ipynb  DocLoaders.ipynb  Ollama_Embeding.ipynb  faiss_db.ipynb  huggingFace-embeding.ipynb
02-apps/ollama_apps/: app.py
02-apps/proj1_similar_word_finder_app/: app.py  myData.csv  requirements.txt
16-hf-apps/: 00-Intro.ipynb  01-embeddings.ipynb  02-prompts.ipynb  03-selectors.ipynb  04-output-parsers.ipynb  data.csv  words_embeddings.csv
16-hf-apps/proj1_similar_word_finder_app/: pyproject.toml
