[project]
name = "langchain_ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
]
